[package]
name = "assignment1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lstsq = "0.5"
nalgebra = "0.32"
nalgebra-glm = "0.18"
obj-rs = { git = "https://github.com/fayalalebrun/obj-rs.git", rev = "066b41e"}
pico-args = "0.5"
rand = "0.8"