[package]
name = "assignment1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lstsq = "0.5"
nalgebra = { version = "0.32", features = ["sparse"] }
nalgebra-glm = { version = "0.18", features = ["convert-bytemuck"]}
obj-rs = { git = "https://github.com/fayalalebrun/obj-rs.git", rev = "066b41e"}
pico-args = "0.5"
rand = "0.8"
approx = "0.5"

# visualization-related
glium = "0.32"
egui_glium = "0.20.1"
egui = "0.20"
